<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_movie_poster"
            android:layout_width="180dp"
            android:layout_height="270dp"
            android:layout_margin="16dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/detail_title"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/detail_rate"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_fixed_rate"
            app:layout_constraintStart_toEndOf="@+id/tv_fixed_rate"/>

        <TextView
            android:id="@+id/tv_detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/detail_release_date"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_fixed_release_date"
            app:layout_constraintStart_toEndOf="@+id/tv_fixed_release_date" />

        <TextView
            android:id="@+id/tv_plot_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:justificationMode="inter_word"
            android:text="@string/detail_plot_synopsis"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fixed_overview" />

        <TextView
            android:id="@+id/tv_fixed_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_rating"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

        <TextView
            android:id="@+id/tv_fixed_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_release_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_fixed_rate"
            app:layout_constraintTop_toBottomOf="@+id/tv_fixed_rate" />

        <TextView
            android:id="@+id/tv_fixed_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_overview"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie_poster" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>